Botones inactivos agregados y modificaciones en finalizar consulta según circuito

--- a/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
+++ b/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
@@ -19,5 +19,5 @@
     } @else {
       <app-btn-primary (click)="navegarASeleccionarTurno()" [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
     }
-    <app-btn-secondary [buttonText]="'Volver'"></app-btn-secondary>
+    <app-btn-secondary (click)="volver()" [buttonText]="'Volver'"></app-btn-secondary>
 </mat-card>
