--- a/front/src/app/shared/components/card-datos-paciente/card-datos-paciente.component.html
+++ b/front/src/app/shared/components/card-datos-paciente/card-datos-paciente.component.html
@@ -9,7 +9,7 @@
     </div>
   
     <div class="btnContainer">
-      <app-btn-secondary buttonText="Editar datos"></app-btn-secondary>
+      <app-btn-inactive buttonText="Editar datos"></app-btn-inactive>
       <app-btn-primary (click)="navegarAConfirmarTurno()" buttonText="Continuar"></app-btn-primary>
     </div>
   </div>
