--- a/front/src/app/shared/components/card-datos-paciente/card-datos-paciente.component.scss
+++ b/front/src/app/shared/components/card-datos-paciente/card-datos-paciente.component.scss
@@ -17,7 +17,7 @@
     justify-content: end;
 }
 
-app-btn-primary, app-btn-secondary{
+app-btn-primary, app-btn-secondary, app-btn-inactive{
     width: 150px;
     height: 40px;
 }
