--- a/front/src/app/shared/components/dialog-turno-confirmado/dialog-turno-confirmado.component.html
+++ b/front/src/app/shared/components/dialog-turno-confirmado/dialog-turno-confirmado.component.html
@@ -2,7 +2,7 @@
     <h2>¡Turno Confirmado!</h2>
 
 <mat-dialog-actions>
-  <app-btn-secondary buttonText="Imprimir Comprobante"></app-btn-secondary>
+  <app-btn-secondary (click)="imprimirComprobante()" buttonText="Imprimir Comprobante"></app-btn-secondary>
   <app-btn-primary (click)="volverAlInicio()" buttonText="Finalizar"></app-btn-primary>
 </mat-dialog-actions>
 </div>
