--- a/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
+++ b/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
@@ -54,10 +54,10 @@
   }
 </div>
 
-@for (item of turnosTomados; track $index) {
+<!-- @for (item of turnosTomados; track $index) {
 {{item.inicioFechaHora | date : 'dd/MM/yyyy'}}
 {{item.inicioFechaHora | date : 'hh:mm'}}
-}
+} -->
 
 
 <!-- <div *ngFor="let item of listaTurnos; trackBy: trackByFn">
