--- a/front/src/app/features/estudios-clinicos/components/seleccionar-estudio/seleccionar-estudio.component.html
+++ b/front/src/app/features/estudios-clinicos/components/seleccionar-estudio/seleccionar-estudio.component.html
@@ -18,5 +18,5 @@
       } @else {
         <app-btn-primary (click)="navegarAOpcionSeleccionada()" [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
       }
-    <app-btn-secondary [buttonText]="'Volver'"></app-btn-secondary>
+    <app-btn-secondary (click)="volver()" [buttonText]="'Volver'"></app-btn-secondary>
 </mat-card>
