--- a/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.scss
+++ b/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.scss
@@ -26,3 +26,13 @@ app-btn-primary{
     height: 40px;
     width: 250px;
 }
+
+.reload-icon{
+    height: 25px;
+    padding-top: .25em;
+    padding-left: 1em;
+}
+.container-titulo{
+   display: flex;
+   justify-content: center;
+}
