--- a/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
+++ b/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
@@ -1,4 +1,4 @@
-<h2>Lista de espera Dr. {{usuarioLogueado?.persona?.nombre}} {{usuarioLogueado?.persona?.apellido}}</h2>
+<h2>Lista de espera {{abreviatura}} {{usuarioLogueado?.persona?.nombre}} {{usuarioLogueado?.persona?.apellido}}</h2>
 <div class="container-titulo">
   <h2>{{hoy  | date:'dd-MM-yyyy'   }}</h2>
   <img class="reload-icon"  src="assets/img/autorenew.png" alt="volver a cargar lista de espera" (click)="getTurnosConfirmadosParaListaDeEspera()">
